tato-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tato-frontend
  namespace: tato
spec:
  type: ClusterIP
  selector:
    app: tato-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
